LPD-17939 make sure elements are not overlapped with sidebar buttons

--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_Toolbar.scss
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/META-INF/resources/page_editor/app/components/_Toolbar.scss
@@ -87,6 +87,14 @@ html#{$cadmin-selector} {
 }
 
 html#{$cadmin-selector}
+	.page-editor__small-resolution
+	.cadmin
+	.page-editor__toolbar
+	.navbar-nav.start {
+	padding-left: 48px;
+}
+
+html#{$cadmin-selector}
 	body.open
 	.cadmin
 	.page-editor__toolbar
